feat: add parsing endpoint
